--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           >Web<span class="studio">Studio</span></a
         >
         <ul class="menu-nav">
-          <li><a href="">Studio</a></li>
+          <li><a href="./index.html" class="link">Studio</a></li>
           <li><a href="">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
         </ul>
@@ -33,7 +33,9 @@
       <address class="info-contacts">
         <ul>
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="mail"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
             <a href="tel:+110001111111">+11 (000) 111-11-11</a>
@@ -43,15 +45,15 @@
     </header>
     <main>
       <section class="container">
-        <h1 class="header-1">Effective Solutions for Your Business</h1>
+        <h1 class="main-header">Effective Solutions for Your Business</h1>
         <button class="button" type="button">Order Service</button>
       </section>
       <section>
         <h2 class="hidden">What We Do</h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="third-level-title">Strategy</h3>
+            <p class="text-title">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
@@ -79,18 +81,18 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Team</h2>
+      <section class="team-section">
+        <h2 class="team-title">Our Team</h2>
         <ul>
-          <li>
+          <li class="team-item">
             <img
               src="./images/Mark_Guerrero.jpg"
               alt="Team member Mark_Guerrero"
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="third-level-title">Mark Guerrero</h3>
+            <p class="">Product Designer</p>
           </li>
           <li>
             <img
