--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
         >
         <ul class="menu-nav">
           <li><a href="./index.html" class="link">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+          <li><a href="" class="link">Portfolio</a></li>
+          <li><a href="" class="link">Contacts</a></li>
         </ul>
       </nav>
       <address class="info-contacts">
         <ul>
           <li>
-            <a href="mailto:info@devstudio.com" class="mail"
+            <a href="mailto:info@devstudio.com" class="contacts"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111" class="contacts">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
@@ -59,22 +59,22 @@
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="third-level-title">Punctuality</h3>
+            <p class="text-title">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
-            </p>
+            </p class="text-title">
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="third-level-title">Diligence</h3>
+            <p class="text-title">
               Research and confirm brands with the strongest digital growth
               opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="third-level-title">Technologies</h3>
+            <p class="text-title">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -92,7 +92,7 @@
               height="260"
             />
             <h3 class="third-level-title">Mark Guerrero</h3>
-            <p class="">Product Designer</p>
+            <p class="text-title">Product Designer</p>
           </li>
           <li>
             <img
@@ -101,8 +101,8 @@
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="third-level-title">Tom Ford</h3>
+            <p class="text-title">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -111,8 +111,8 @@
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="third-level-title">Camila Garcia</h3>
+            <p class="text-title">Marketing</p>
           </li>
           <li>
             <img
@@ -121,8 +121,8 @@
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="third-level-title">Daniel Wilson</h3>
+            <p class="text-title">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -136,8 +136,8 @@
               width="360"
               height="300"
             />
-            <h3>Banking App</h3>
-            <p>App</p>
+            <h3 class="third-level-title">Banking App</h3>
+            <p class="text-title">App</p>
           </li>
           <li>
             <img
@@ -146,7 +146,7 @@
               width="360"
               height="300"
             />
-            <h3>Cashless Payment</h3>
+            <h3 class="third-level-title">Cashless Payment</h3>
             <p>Marketing</p>
           </li>
           <li>
@@ -156,8 +156,8 @@
               width="360"
               height="300"
             />
-            <h3>Meditation App</h3>
-            <p>App</p>
+            <h3 class="third-level-title">Meditation App</h3>
+            <p class="text-title">App</p>
           </li>
           <li>
             <img
@@ -166,8 +166,8 @@
               width="360"
               height="300"
             />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="third-level-title">Taxi Service</h3>
+            <p class="text-title">Marketing</p>
           </li>
           <li>
             <img
@@ -176,8 +176,8 @@
               width="360"
               height="300"
             />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="third-level-title">Screen Illustrations</h3>
+            <p class="text-title">Design</p>
           </li>
           <li>
             <img
@@ -186,8 +186,8 @@
               width="360"
               height="300"
             />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="third-level-title">Online Courses</h3>
+            <p class="text-title">Marketing</p>
           </li>
         </ul>
       </section>
