--- a/index.html
+++ b/index.html
@@ -141,17 +141,17 @@
           </li>
           <li>
             <img
-              src="./images/Cashless_Payment.png"
+              src="./images/Cashless_Payment.jpg"
               alt="Cashless Payment"
               width="360"
               height="300"
             />
             <h3 class="third-level-title">Cashless Payment</h3>
-            <p>Marketing</p>
+            <p class="text-title">Marketing</p>
           </li>
           <li>
             <img
-              src="./images/Meditation_App.png"
+              src="./images/Meditation_App.jpg"
               alt="Meditation App"
               width="360"
               height="300"
