--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <p class="text-title">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
-            </p class="text-title">
+            </p> 
           </li>
           <li>
             <h3 class="third-level-title">Diligence</h3>
@@ -82,7 +82,7 @@
         </ul>
       </section>
       <section class="team-section">
-        <h2 class="team-title">Our Team</h2>
+        <h2 class="subtitle">Our Team</h2>
         <ul>
           <li class="team-item">
             <img
@@ -127,7 +127,7 @@
         </ul>
       </section>
       <section>
-        <h2>Our Portfolio</h2>
+        <h2 class="subtitle">Our Portfolio</h2>
         <ul>
           <li>
             <img
