--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <p class="text-title">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
-            </p> 
+            </p class="text-title">
           </li>
           <li>
             <h3 class="third-level-title">Diligence</h3>
@@ -94,7 +94,7 @@
             <h3 class="third-level-title">Mark Guerrero</h3>
             <p class="text-title">Product Designer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/Tom_Ford.jpg"
               alt="Team member Tom_Ford"
@@ -104,7 +104,7 @@
             <h3 class="third-level-title">Tom Ford</h3>
             <p class="text-title">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/Camila_Garcia.jpg"
               alt="Team member Camila_Garcia"
@@ -114,7 +114,7 @@
             <h3 class="third-level-title">Camila Garcia</h3>
             <p class="text-title">Marketing</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/Daniel_Wilson.jpg"
               alt="Team member Daniel_Wilson"
